# ice

./: flake.nix
conancpp/: CMakeLists.txt  README.md  conanfile.py  flake.nix
conancpp/src/: CMakeLists.txt  main.cpp
cpp23/: CMakeLists.txt  flake.nix
imgui/: .sln.lua  CMakeLists.txt  conanfile.py  flake.nix
imgui-conan/: CMakeLists.txt  flake.nix
imgui-conan/src/: CMakeLists.txt  main.cpp
imgui/src/: CMakeLists.txt  main.cpp
moderncpp/: .clang-format  .clangd  .gitignore  README.md
moderncpp/src/: CMakeLists.txt  main.cpp
myc/: flake.nix
opengl/: flake.nix
opengl/src/: CMakeLists.txt  main.cpp
py-ds/: flake.nix
raw/: flake.nix
